fixed js link path and renamed javascript folder

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/44754adc42.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://bootswatch.com/4/yeti/bootstrap.min.css">
-    <script src="./js/javascript.js" defer></script>
+    <script src="./javascript/main.js" defer></script>
 
     <title>MyBookList App</title>
 </head>
